<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Composite00"
    android:orientation="vertical"
    tools:context="it.pknu.passwordmanager.ShowDBActivity">

    <TextView
        android:id="@+id/ShowDBTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/ShowDB_name"
        android:textSize="30dp" />

    <TableLayout
        android:id="@+id/ShowDBBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
        <TableRow>

            <TextView
                android:id="@+id/txtID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ShowDB_ID" />

            <TextView
                android:id="@+id/txtPwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ShowDB_Pwd" />

            <TextView
                android:id="@+id/txtURL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/ShowDB_URL" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgExport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            app:srcCompat="@drawable/export"/>

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            app:srcCompat="@drawable/edit"/>

        <ImageView
            android:id="@+id/imgSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            app:srcCompat="@drawable/plus" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            app:srcCompat="@drawable/close" />

    </LinearLayout>
</LinearLayout>
