<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Composite00"
    android:orientation="vertical"
    tools:context="it.pknu.passwordmanagerandroid.AddRecordActivity">

    <TextView
        android:id="@+id/AddRecordTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/AddRecord_name"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/AddRecord_ID_title" />

        <EditText
            android:id="@+id/etID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/AddRecord_Pwd_title" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvURL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/AddRecord_URL_title" />

        <EditText
            android:id="@+id/etURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgNone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

        <ImageView
            android:id="@+id/imgNone2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

        <ImageView
            android:id="@+id/imgSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            app:srcCompat="@drawable/plus" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            app:srcCompat="@drawable/close" />

    </LinearLayout>
</LinearLayout>
